--- a/src/main/resources/templates/add-movie.html
+++ b/src/main/resources/templates/add-movie.html
@@ -12,7 +12,7 @@
     <h2>Film Ekleme Formu</h2>
     <div class="row">
         <div class="col-md-6">
-            <form th:action="@{/saveMovie}" th:object="${movie}" method="post">
+            <form th:action="@{/movie/save}" th:object="${movie}" method="post">
                 <div class="row">
                     <div class="form-group col-md-12">
                         <label for="name" class="col-form-label">Film Adı</label>
