--- a/src/main/resources/templates/update-movie.html
+++ b/src/main/resources/templates/update-movie.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mt-5">
-                        <input type="submit" class="btn btn-success" value="Düzenle">
+                        <input type="submit" class="btn btn-success" value="Güncelle">
                     </div>
                 </div>
             </form>
