--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                     </tbody>
                 </table>
             </div>
-            <p class="my-5"><a href="/addMovie" class="btn btn-primary">Film Ekle</a> | <a href="/addActor" class="btn btn-primary">Oyuncu Ekle</a></p>
+            <p class="my-5"><a href="/movie/add" class="btn btn-primary">Film Ekle</a> | <a href="/actor/add" class="btn btn-primary">Oyuncu Kadrosu Tanımla</a></p>
         </div>
     </div>
 </div>
