--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,29 @@
     <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
+<!--navbar-->
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Film Koleksiyonu</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Anasayfa <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Film Listesi</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/actors">Oyuncu Listesi</a>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+
+<!--content-->
 <div th:switch="${movies}" class="container my-5">
     <div class="row">
         <div class="col-md-12">
