--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -8,30 +8,13 @@
     <script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
-<!--navbar-->
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Film Koleksiyonu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Anasayfa <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/movies">Film Listesi</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/actors">Oyuncu Listesi</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
 <!--content-->
 <div th:switch="${movies}" class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
 
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <h2 th:case="null">Henüz film eklenmedi!</h2>
@@ -56,9 +39,7 @@
                         <td th:text="${movie.releaseYear}"></td>
                         <td th:text="${movie.media}"></td>
                         <td th:text="${movie.language}"></td>
-                        <td>
-                            <p th:each="category : ${movie.movieCategories}" th:text="${category.name}"></p>
-                        </td>
+                        <td></td>
                         <td>
                             <p th:each="cast : ${movie.movieCast}" th:text="${cast.fullName}"></p>
                         </td>
@@ -68,7 +49,6 @@
                     </tbody>
                 </table>
             </div>
-            <p class="my-5"><a href="/movie/add" class="btn btn-primary">Film Ekle</a> | <a href="/actor/add" class="btn btn-primary">Oyuncu Kadrosu Tanımla</a></p>
         </div>
     </div>
 </div>
