--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,18 @@
 
 <!--content-->
 <div th:switch="${movies}" class="container my-5">
-
+    <div class="row">
+        <div class="col-md-10">
+            <label for="category" class="col-form-label">Türü</label>
+            <select th:field="*{selectedCategory}" class="form-control" id="category">
+                <option th:each="category: ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+            </select>
+            <span th:if="${#fields.hasErrors('selectedCategory')}" th:errors="*{selectedCategory}" class="text-danger"></span>
+        </div>
+        <div class="col-md-2">
+            <input type="submit" class="btn btn-success" value="Türe Göre Ara">
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <h2 th:case="null">Henüz film eklenmedi!</h2>
