adding security module

--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -49,6 +49,7 @@
                     </tbody>
                 </table>
             </div>
+            <p class="my-5"><a href="/" class="btn btn-primary">Anasayfaya dön</a> | <a href="/movie/add" class="btn btn-primary">Film Ekle</a></p>
         </div>
     </div>
 </div>
