--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,50 +33,50 @@
 <div th:switch="${movies}" class="container my-5">
     <div class="row">
         <div class="col-md-3">
-            <form th:action="@{/movie/name/search}" class="form-horizontal" method="post">
-                <div class="form-group">
+            <form th:action="@{/movie/name/search}" class="form-horizontal row" method="post">
+                <div class="form-group col-md-9">
                     <label for="keyword" class="col-form-label">Film Ara</label>
                     <input type="text" name="keyword" id="keyword" class="form-control" placeholder="Film adı ile arama">
                 </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Ara">
+                <div class="form-group col-md-3 mt-4">
+                    <input type="submit" class="btn btn-secondary" value="Ara">
                 </div>
             </form>
         </div>
         <div class="col-md-3">
-            <form th:action="@{/movie/actor/search}" class="form-horizontal" method="post">
-                <div class="form-group">
+            <form th:action="@{/movie/actor/search}" class="form-horizontal row" method="post">
+                <div class="form-group col-md-9">
                     <label for="keyword2" class="col-form-label">Oyuncu Ara</label>
                     <input type="text" name="keyword" id="keyword2" class="form-control" placeholder="Oyuncu adı ile arama">
                 </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Ara">
+                <div class="form-group col-md-3 ">
+                    <input type="submit" class="btn btn-secondary mt-4" value="Ara">
                 </div>
             </form>
         </div>
         <div class="col-md-3">
-            <form th:action="@{/movie/category/search}" class="form-horizontal" method="post">
-                <div class="form-group">
+            <form th:action="@{/movie/category/search}" class="form-horizontal row" method="post">
+                <div class="form-group col-md-9">
                     <label for="keyword3" class="col-form-label">Tür Ara</label>
                     <select name="keyword" class="form-control" id="keyword3">
                         <option th:each="category : ${categories}" th:value="${category.name}" th:text="${category.name}"></option>
                     </select>
                 </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Ara">
+                <div class="form-group col-md-3 mt-4">
+                    <input type="submit" class="btn btn-secondary" value="Ara">
                 </div>
             </form>
         </div>
         <div class="col-md-3">
-            <form th:action="@{/movie/filter}" class="form-horizontal" method="post">
-                <div class="form-group">
+            <form th:action="@{/movie/filter}" class="form-horizontal row" method="post">
+                <div class="form-group col-md-9">
                     <label class="col-form-label" for="filter">Yayın Yılı</label>
                     <select name="filter" class="form-control" id="filter">
                         <option th:value="ASC" selected>En Eski Filmler</option>
                         <option th:value="DESC">En Yeni Filmler</option>
                     </select>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-md-3 mt-4">
                     <input type="submit" class="btn btn-primary" value="Sırala">
                 </div>
             </form>
@@ -86,7 +86,6 @@
         <div class="col-md-12">
             <h2 th:case="null">Henüz film eklenmedi!</h2>
             <div th:case="*">
-                <h2 class="my-5">Film Listesi</h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
@@ -112,8 +111,8 @@
                         <td>
                             <p th:each="cast : ${movie.movieCast}" th:text="${cast.fullName}"></p>
                         </td>
-                        <td><a th:href="@{/movie/edit/{id}(id=${movie.id})}" class="btn btn-warning">Düzenle</i></a></td>
-                        <td><a th:href="@{/movie/delete/{id}(id=${movie.id})}" class="btn btn-danger">Sil</a></td>
+                        <td><b><a th:href="@{/movie/edit/{id}(id=${movie.id})}" class="text-warning">Düzenle</i></a></b></td>
+                        <td><b><a th:href="@{/movie/delete/{id}(id=${movie.id})}" class="text-danger">Sil</a></b></td>
                     </tr>
                     </tbody>
                 </table>
